Fix server CSS alignment in AccountNext

--- a/app/widgets/AccountNext/accountnext.css
+++ b/app/widgets/AccountNext/accountnext.css
@@ -23,7 +23,7 @@
     top: 4rem;
     float: right;
     position: relative;
-    line-height: 3rem;
+    line-height: 2rem;
     padding: 1rem;
     width: 15rem;
     box-sizing: border-box;
